Wed May 27 13:44:10 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * contrib:

          . Removed the external dependency on utilities located in ACE.

Wed May 27 13:41:07 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * contrib/Utility.mpc:

          . Since we are building XSC on top of ACE, we can remove the
            UTILITY_ROOT environment variable and just use the one
            directly in ACE.

Tue May 26 20:13:38 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * XSC/XSC.mpc:

          . Removed the boost_system base project since it was breaking
            builds on Ubuntu. Hopefully, this does not break builds on
            other non-Windows platforms.

Fri May  8 18:50:50 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * XSC/Parser.hpp:

          Added a couple newlines.

Tue May  5 17:25:37 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * Examples/Recursive:
        * Examples/Recursive/recursive.xsd:

          Example testing support for recursive types.

        * XSC/Traversal/Complex.cpp:
        * XSC/be/CXX/Header.cpp:
        * XSC/be/CXX/Inline.cpp:
        * XSC/be/CXX/Source.cpp:
        * XSC/be/CXX/TraversalSource.cpp:
        * XSCRT/XMLSchema/Types.hpp:
        * XSCRT/XSCRT/Elements.hpp:

Wed Apr 29 02:30:23 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * XSC/Parser.cpp:
        * XSC/Parser.hpp:
        * XSC/be/CXX/Elements.cpp:
        * XSC/be/CXX/Elements.hpp:
        * XSC/be/CXX/Header.cpp:
        * XSC/be/CXX/Inline.cpp:
        * XSC/be/CXX/TraversalHeader.cpp:
        * XSC/be/CXX/TraversalSource.cpp:
        * XSC/be/CXX/TypeInfoSource.cpp:
        * XSC/be/CXX/WriterHeader.cpp:
        * XSC/be/CXX/WriterSource.cpp:

          Bugfixes to generate working code for CIAO.

Thu Apr 16 18:33:45 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * XSC/utils/XML_Schema_Resolver.h: