@@ -442,7 +442,7 @@ namespace XSCRT
       string xns (ns);
 
       XMLCh const* p (
-        e.dom_element ()->lookupNamespacePrefix (xns.c_str (), false));
+        e.dom_element ()->lookupPrefix (xns.c_str ()));
 
       if (p == 0)
       {
